@@ -17,4 +17,4 @@ If it passes the tests, use
 
 to install it.
 
-mjd-perl-template@plover.com
+mjd-perl-template+@plover.com
