@@ -3,6 +3,7 @@ Makefile.PL
 INSTALL
 README
 Template.pm
+Template/Preprocess.pm
 t/01-basic.t
 t/02-hash.t
 t/03-out.t
