@@ -1,7 +1,8 @@
 #!perl
 #
 # test apparatus for Text::Template module
-# still incomplete.
+# Add Danni Xie's test that he sent in his email.
+# 20000305
 
 use lib '../blib/lib';
 use Text::Template;
@@ -14,11 +15,11 @@ BEGIN {
   }
 }
 
-die "This is the test program for Text::Template version 1.23.
+die "This is the test program for Text::Template version 1.31.
 You are using version $Text::Template::VERSION instead.
 That does not make sense.\n
 Aborting"
-  unless $Text::Template::VERSION == 1.23;
+  unless $Text::Template::VERSION == 1.31;
 
 print "1..1\n";
 
